# ai-commit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-05-acm.md
docs/superpowers/specs/: 2026-04-05-acm-design.md
src/: config.rs  diff.rs  git.rs  hook.rs  main.rs  prompt.rs  scope.rs  setup.rs  token.rs  ui.rs
src/llm/: mod.rs  ollama.rs  openai.rs
