[package]
name = "acm"
version = "0.2.0"
edition = "2021"
description = "AI commit message generator"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "sync"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tempfile = "3"

[dev-dependencies]

[profile.release]
strip = true
lto = true
codegen-units = 1
